--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,33 +1,16 @@
-springVersion="3.1.1.RELEASE"
 
-logbackVersion="1.0.1"
-slf4jVersion="1.6.4"
 
-guavaVersion="11.0.2"
-cglibVersion="2.2.2"
-
-junitVersion="4.10"
-hamcrestVersion="1.3.RC2"
-mockitoVersion="1.9.0"
-
-h2Version="1.3.164"
-hibernateVersion="4.1.0.Final"
-mysqlVersion="5.1.18"
-hsqldbVersion="2.2.8"
-
-lang3Version="3.1"
-codecVersion="1.6"
-
-servletVersion="3.0.1"
-
-libs = [
+ext.libs = [
 	commons: [
-		lang3: "org.apache.commons:commons-lang3:$lang3Version",
-		codec: "commons-codec:commons-codec:$codecVersion"
+		dbcp: "commons-dbcp:commons-dbcp:$commonsDbcpVersion",
+		pool: "commons-pool:commons-pool:$commonsPoolVersion",
+		lang3: "org.apache.commons:commons-lang3:$commonsLang3Version",
+		codec: "commons-codec:commons-codec:$commonsCodecVersion"
 	],
 	cglib: "cglib:cglib-nodep:$cglibVersion",
 	spring: [
 		core: "org.springframework:spring-core:$springVersion",
+		context: "org.springframework:spring-context:$springVersion",
 		webmvc: "org.springframework:spring-webmvc:$springVersion",
 		web: "org.springframework:spring-web:$springVersion",
 		oxm: "org.springframework:spring-oxm:$springVersion",
@@ -41,8 +24,11 @@ libs = [
 		config: "org.springframework.security:spring-security-config:$springSecurityVersion"
 	],
 	hibernate: [
+		core: "org.hibernate:hibernate-core:$hibernateVersion",
 		entitymanager: "org.hibernate:hibernate-entitymanager:$hibernateVersion",
-		jpamodelgen: "org.hibernate:hibernate-jpamodelgen:1.2.0.FINAL"
+		validator: "org.hibernate:hibernate-validator:$hibernateValidatorVersion",
+		jpamodelgen: "org.hibernate:hibernate-jpamodelgen:1.2.0.FINAL",
+		persistence: "org.hiberante.javax.persistence:hibernate-jpa-2.0-api:$hibernateJpaVersion"
 	],
 	databases: [
 		h2: "com.h2database:h2:$h2Version",
@@ -65,7 +51,9 @@ libs = [
 	javax: [
 		servlet: [
 			api: "javax.servlet:javax.servlet-api:$servletVersion"
-		]
+		],
+		validation: "javax.validation:validation-api:$validationApiVersion",
+		jta: "javax.transaction:jta:$jtaVersion"
 	],
 	testing: [
 		junit: "junit:junit:$junitVersion",
