--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,34 @@
+projectName=ISharelib
 projectGroupId=com.chriswk.movies
 projectVersion=0.0.1-SNAPSHOT
 javaVersion=1.7
 servletVersion=3.0
 gradleVersion=1.0-milestone-9
+
+springVersion="3.1.1.RELEASE"
+springSecurityVersion="3.1.0.RELEASE"
+logbackVersion="1.0.1"
+slf4jVersion="1.6.4"
+
+guavaVersion="11.0.2"
+cglibVersion="2.2.2"
+
+junitVersion="4.10"
+hamcrestVersion="1.3.RC2"
+mockitoVersion="1.9.0"
+
+h2Version="1.3.164"
+hibernateVersion="4.1.0.Final"
+hibernateValidatorVersion="4.2.0.Final"
+validationApiVersion="1.0.0.GA"
+hibernateJpaVersion="1.0.1.Final"
+mysqlVersion="5.1.18"
+hsqldbVersion="2.2.8"
+
+commonsDbcpVersion="1.3"
+commonsPoolVersion="1.5.6"
+commonsLang3Version="3.1"
+commonsCodecVersion="1.6"
+
+servletVersion="3.0.1"
+jtaVersion="1.1"
