--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ allprojects {
 	repositories {
 		mavenCentral()
 		mavenLocal()
+		mavenRepo urls: [
+			"https://repository.jboss.org/nexus/content/groups/public/",
+			"http://maven.springframework.org/snapshot"
+		]
 	}
 }
 
